--- a/index.html
+++ b/index.html
@@ -1,48 +1,115 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
+<!--<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">-->
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
+
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-<html lang="zh-cn">
 <head>
-    <title>Nivo Slider Demo</title>
-    <link rel="stylesheet" href="themes/default/default.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="themes/light/light.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="themes/dark/dark.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="themes/bar/bar.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="nivo-slider.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
-    <link rel="stylesheet" href="http://dreamsky.github.io/main/blog/common/init.css">
+    <meta http-equiv="content-type" content="text/html; charset=utf-8"/>
+    <meta charset="utf-8"/>
+    <title>彩票吧www.cp8aa.com 北京赛车PK10,快3,时时彩,快乐十分等彩票游戏开奖号码直播</title>
+    <meta name="description"
+    content="彩票吧www.cp8aa.com 本站提供北京赛车PK10,江苏快3,安徽快3,北京快3,重庆时时彩,广东快乐十分,秒速飞艇等彩票游戏开奖号码走势及开奖号码直播，并提供彩票资讯及预测服务。">
+    <meta name="keywords" content="彩票,彩票开奖,北京赛车,北京赛车PK10,快3,时时彩,快乐十分,北京赛车PK10开奖">
+    <!--<link rel="icon" href="/Public/Home/images/favicon.ico"/>-->
+    <!--<link rel="stylesheet" href="reset.css" tppabs="http://www.cp8aa.com/Public/Home/css/reset.css"/>-->
+    <!--<link rel="stylesheet" href="style.css" tppabs="http://www.cp8aa.com/Public/Home/css/style.css"/>-->
+    <!--<link rel="stylesheet" href="navStyle.css" tppabs="http://www.cp8aa.com/Public/Home/css/navStyle.css"/>-->
+    <!--<link rel="stylesheet" href="lists.css" tppabs="http://www.cp8aa.com/Public/Home/css/lists.css"/>-->
+    <link rel="stylesheet" href="themes/default/default.css" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="themes/light/light.css" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="themes/dark/dark.css" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="themes/bar/bar.css" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="nivo-slider.css" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="0style.css" type="text/css">
     <style>
-    .slider-wrapper {
-        width: 700px;
-        /* width: 80%; */
-        margin-top: 150px;
-    }
-    .top-banner{
-        background-color: #333;
-    }
+        .slider-wrapper {
+            width: 1190px;
+            margin-top: -130px;
+        }
     </style>
 </head>
 <body>
-    <div id="wrapper">
-        <div class="slider-wrapper theme-default">
-            <div id="slider" class="nivoSlider">
-                <img src="images/toystory.jpg" data-thumb="images/toystory.jpg" alt="" />
-                <a href="http://dev7studios.com"><img src="images/up.jpg" data-thumb="images/up.jpg" alt="" title="This is an example of a caption" /></a>
-                <img src="images/walle.jpg" data-thumb="images/walle.jpg" alt="" data-transition="slideInLeft" />
-                <img src="images/nemo.jpg" data-thumb="images/nemo.jpg" alt="" title="#htmlcaption" />
-            </div>
-            <div id="htmlcaption" class="nivo-html-caption">
-                <strong>This</strong> is an example of a <em>HTML</em> caption with <a href="#">a link</a>. 
-            </div>
-        </div>
-        <div class="footer-banner" style="width:728px; margin:0 auto"></div>
+<header>
+    <div class="w">
+        <a href="#" style="display: block; width: 100%; height: 100px;
+background: url(images/toystory.jpg) no-repeat 50% 0;">
+        </a>
     </div>
-    <script type="text/javascript" src="scripts/jquery-1.9.0.min.js"></script>
-    <script type="text/javascript" src="jquery.nivo.slider.js"></script>
-    <script type="text/javascript">
-    $(window).load(function() {
+</header>
+<div class="nav_sy">
+    <div class="w">
+        <ul class="fl city">
+            <h1><a href="#">首页</a></h1>
+        </ul>
+        <ul class="fr">
+            <li>
+                <a href="#">北京赛车</a>
+            </li>
+            <li class="space"></li>
+            <li>
+                <a href="#">重庆时时彩</a>
+            </li>
+            <li class="space"></li>
+            <li>
+                <a href="#">广东快乐十分</a>
+            </li>
+            <li class="space"></li>
+            <li>
+                <a href="#">江苏快三</a>
+            </li>
+            <li class="space"></li>
+            <li>
+                <a href="#">北京快三</a>
+            </li>
+            <li class="space"></li>
+            <li>
+                <a href="#">安徽快三</a>
+            </li>
+            <li class="space"></li>
+            <li>
+                <a href="#">秒速飞艇</a>
+            </li>
+            <li class="space"></li>
+            <li>
+                <a href="#">秒速赛车</a>
+            </li>
+        </ul>
+    </div>
+</div>
+
+<div class="w middle">
+    <div class="logo">
+        <h1>
+            <a href="#"></a>
+        </h1>
+    </div>
+</div>
+
+
+<div id="wrapper">
+    <div class="slider-wrapper theme-default">
+        <div id="slider" class="nivoSlider">
+            <img src="images/Screenshot_6.png" data-thumb="images/Screenshot_6.png" alt="" title="买彩票就像一场超级英雄成长史"/>
+            <img src="images/Screenshot_2.png" data-thumb="images/Screenshot_2.png" alt="" title="只愿后来的我们，没有遗憾……"/>
+            <img src="images/Screenshot_3.png" data-thumb="images/Screenshot_3.png" alt="" title="彩票与乡愁 这里有你魂牵梦绕的故乡"/>
+            <img src="images/Screenshot_4.png" data-thumb="images/Screenshot_4.png" alt="" title="“畅游”梦工厂 寻找梦想与快乐之源"/>
+                 <!--data-transition="slideInLeft"-->
+            <img src="images/Screenshot_5.png" data-thumb="images/Screenshot_5.png" alt="" title="致敬一线福彩人：您辛苦了！"/>
+        </div>
+    </div>
+    <div class="footer-banner" style="width:728px; margin:0 auto"></div>
+</div>
+<script type="text/javascript" src="scripts/jquery-1.9.0.min.js"></script>
+<script type="text/javascript" src="jquery.nivo.slider.js"></script>
+<script type="text/javascript">
+    $(window).load(function () {
         $('#slider').nivoSlider();
     });
-    </script>
-    <script src="http://dreamsky.github.io/main/blog/common/init.js"></script>
+</script>
 </body>
 </html>
+
+
+
