--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!--<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">-->
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
         "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!--<html xmlns="http://www.w3.org/1999/xhtml">-->
 
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 <head>
@@ -9,7 +9,7 @@
     <meta charset="utf-8"/>
     <title>彩票吧www.cp8aa.com 北京赛车PK10,快3,时时彩,快乐十分等彩票游戏开奖号码直播</title>
     <meta name="description"
-    content="彩票吧www.cp8aa.com 本站提供北京赛车PK10,江苏快3,安徽快3,北京快3,重庆时时彩,广东快乐十分,秒速飞艇等彩票游戏开奖号码走势及开奖号码直播，并提供彩票资讯及预测服务。">
+          content="彩票吧www.cp8aa.com 本站提供北京赛车PK10,江苏快3,安徽快3,北京快3,重庆时时彩,广东快乐十分,秒速飞艇等彩票游戏开奖号码走势及开奖号码直播，并提供彩票资讯及预测服务。">
     <meta name="keywords" content="彩票,彩票开奖,北京赛车,北京赛车PK10,快3,时时彩,快乐十分,北京赛车PK10开奖">
     <!--<link rel="icon" href="/Public/Home/images/favicon.ico"/>-->
     <!--<link rel="stylesheet" href="reset.css" tppabs="http://www.cp8aa.com/Public/Home/css/reset.css"/>-->
@@ -20,22 +20,24 @@
     <link rel="stylesheet" href="themes/light/light.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="themes/dark/dark.css" type="text/css" media="screen"/>
     <link rel="stylesheet" href="themes/bar/bar.css" type="text/css" media="screen"/>
-    <link rel="stylesheet" href="nivo-slider.css" type="text/css" media="screen"/>
-    <link rel="stylesheet" href="style.css" type="text/css" media="screen"/>
-    <link rel="stylesheet" href="0style.css" type="text/css">
+    <link rel="stylesheet" href="style_css/nivo-slider.css" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="style_css/style.css" type="text/css" media="screen"/>
+    <link rel="stylesheet" href="style_css/0style.css" type="text/css">
     <style>
         .slider-wrapper {
             width: 1190px;
-            margin-top: -130px;
+            margin-top: -150px;
         }
     </style>
 </head>
 <body>
 <header>
     <div class="w">
-        <a href="#" style="display: block; width: 100%; height: 100px;
-background: url(images/toystory.jpg) no-repeat 50% 0;">
+        <a href="#" style="display: block; width: 100%; height: 123px;">
+            <img src="images/toptitle.png" height="120px" width="1190" alt="">
         </a>
+
+        <!--background: url(images/toptitle.png) no-repeat 50% 0">-->
     </div>
 </header>
 <div class="nav_sy">
@@ -91,18 +93,29 @@ background: url(images/toystory.jpg) no-repeat 50% 0;">
 <div id="wrapper">
     <div class="slider-wrapper theme-default">
         <div id="slider" class="nivoSlider">
-            <img src="images/Screenshot_6.png" data-thumb="images/Screenshot_6.png" alt="" title="买彩票就像一场超级英雄成长史"/>
-            <img src="images/Screenshot_2.png" data-thumb="images/Screenshot_2.png" alt="" title="只愿后来的我们，没有遗憾……"/>
-            <img src="images/Screenshot_3.png" data-thumb="images/Screenshot_3.png" alt="" title="彩票与乡愁 这里有你魂牵梦绕的故乡"/>
-            <img src="images/Screenshot_4.png" data-thumb="images/Screenshot_4.png" alt="" title="“畅游”梦工厂 寻找梦想与快乐之源"/>
-                 <!--data-transition="slideInLeft"-->
-            <img src="images/Screenshot_5.png" data-thumb="images/Screenshot_5.png" alt="" title="致敬一线福彩人：您辛苦了！"/>
+            <img src="images/Screenshot_6.png" data-thumb="images/Screenshot_6.png" alt=""/>
+            <!--title="买彩票就像一场超级英雄成长史"-->
+            <img src="images/Screenshot_2.png" data-thumb="images/Screenshot_2.png" alt=""/>
+            <!--title="只愿后来的我们，没有遗憾……"-->
+            <img src="images/Screenshot_3.png" data-thumb="images/Screenshot_3.png" alt=""/>
+            <!--title="彩票与乡愁 这里有你魂牵梦绕的故乡"-->
+            <img src="images/Screenshot_4.png" data-thumb="images/Screenshot_4.png" alt=""/>
+            <!--title="“畅游”梦工厂 寻找梦想与快乐之源"-->
+            <!-- data-transition="slideInLeft"-->
+            <img src="images/Screenshot_5.png" data-thumb="images/Screenshot_5.png" alt=""/>
+            <!--title="致敬一线福彩人：您辛苦了！"-->
         </div>
     </div>
-    <div class="footer-banner" style="width:728px; margin:0 auto"></div>
+    <!--<div class="footer-banner" style="width:728px; margin:0 auto; background: #c81623"></div>-->
+</div>
+<div class="w">
+
+</div>
+<div class="foot_vi">
+    <img src="images/Screenshot_foot.png" alt="">
 </div>
 <script type="text/javascript" src="scripts/jquery-1.9.0.min.js"></script>
-<script type="text/javascript" src="jquery.nivo.slider.js"></script>
+<script type="text/javascript" src="jquery/jquery.nivo.slider.js"></script>
 <script type="text/javascript">
     $(window).load(function () {
         $('#slider').nivoSlider();
